--- a/fresh/assets/css/style.css
+++ b/fresh/assets/css/style.css
@@ -4989,7 +4989,7 @@ input:focus {
 /* line 313, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_best-product.scss */
 .gallery-wrapper .gallery-area .gallery-items {
   display: flex;
-  width: 20%;
+  width: 25%;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -5002,14 +5002,20 @@ input:focus {
 @media only screen and (min-width: 576px) and (max-width: 767px) {
   /* line 313, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_best-product.scss */
   .gallery-wrapper .gallery-area .gallery-items {
-    width: 50%;
+    width: 100%;
+  }
+  .shop-method-area .single-method h6, .ti-package, .ti-unlock, .ti-reload { 
+    text-align: center;
   }
 }
 
 @media (max-width: 767px) {
   /* line 313, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_best-product.scss */
   .gallery-wrapper .gallery-area .gallery-items {
-    width: 50%;
+    width: 100%;
+  }
+  .shop-method-area .single-method h6, .ti-package, .ti-unlock, .ti-reload { 
+    text-align: center;
   }
 }
 
